runtime --> run time

--- a/Sources/Background.tex
+++ b/Sources/Background.tex
@@ -295,7 +295,7 @@ as surveyed by \citet{togersen:2004}, is to answer the question:
   ``To which degree can your application be structured in such a way that both
   the data model and the set of virtual operations over it can be extended
   without the need to modify existing code, without the need for code repetition
-  and without runtime type errors.''
+  and without run-time type errors.''
 \end{quote}
 The expression problem is concerned with two-dimensional extensions:
 \begin{inparaenum}[(1)]
