--- a/Sources/Traits/traits.tex
+++ b/Sources/Traits/traits.tex
@@ -51,7 +51,7 @@ with parameters can also be expressed.
 It is tempting to try to instantiate the \lstinline{editor} trait such as
 \lstinline{new[Editor] editor}. However this would result in a type error, because as
 we discussed, \lstinline{editor} has no definition of \lstinline{version}, and
-blindly instantiating it would cause runtime error. This behaviour is on a par
+blindly instantiating it would cause run-time error. This behaviour is on a par
 with Java's abstract classes -- i.e., traits with undefined methods cannot be instantiated on their own.
 
 \paragraph{Traits as Units of Code Reuse.}
