--- a/Sources/Poly/elaboration.tex
+++ b/Sources/Poly/elaboration.tex
@@ -200,7 +200,7 @@ Finally we show the correctness of the algorithmic subtyping:
   If $[[ fs |- A <: B ~~> c]]$ then $ [[   A <: fs -> B ~~> c  ]]   $.
 \end{theorem}
 
-\begin{theorem}[Completeness] \label{thm:complete}
+\begin{theorem}[Completeness]
   If $[[A <: B ~~> c]]$ then there exists $[[c']]$ such that $[[ [] |- A <: B ~~> c']]$.
 \end{theorem}
 
